--- a/index.html
+++ b/index.html
@@ -26,6 +26,59 @@
             <img src="Group 8425.png" alt="">
         </div>
     </section>
+    <section class="about-me">
+        <div class="half-width">
+            <img src="Person Image.png" alt="">
+        </div>
+
+
+        <div class="half-width">
+            <h1>About Me</h1>
+            <p>I am Naeem Islam. I am a student. I am learning web development to do something good in life. I want to
+                be a
+                skilled and paid developer now. I will not stop until I become a web development hero.</p>
+            <a class="order-button" target="_blank" href="https://www.linkedin.com/in/md-naeem-islam-415a29216/">Contact
+                me</a>
+        </div>
+    </section>
+    <section class="recipies-area">
+        <div id="spesial-recipe">
+            <h2 id="hedding">My Recipies</h2>
+            <div class="pragraph">
+                <p> Chicken fry.Farm chicken 1 to 6 piece Soy sauce 2 teaspoons, ginger paste.garlic paste 1 teaspoon2
+                    teaspoons of powdered milk, salt, flour and
+                    oil.</p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-md-4">
+                <img class="item-photo" src="./Project Cover.png" alt="">
+                <h2>Recipie Title</h2>
+                <p>These 25 great ground beef recipes are one of our favorite answers to what’s for dinner, because
+                    chances are you</p>
+
+            </div>
+            <div class="col-md-4">
+                <img class="item-photo" src="./Project Cover1.jpg" alt="">
+                <h2>Recipie Title</h2>
+                <p>These 25 great ground beef recipes are one of our favorite answers to what’s for dinner, because
+                    chances are you</p>
+            </div>
+            <div class="col-md-4">
+                <img class="item-photo" src="./Project Cover4.png" alt="">
+                <h2> Recipie Title</h2>
+                <p>These 25 great ground beef recipes are one of our favorite answers to what’s for dinner, because
+                    chances are you</p>
+            </div>
+        </div>
+
+    </section>
+    <footer class="footerbio">
+        <h2><span class="colorfooter">FOOD</span> <span class="networkcolor">NETWORK</span> </h2>
+        <p class="lastletter">Eat healthy to live healthy. Live healthy to live happy</p>
+    </footer>
 
 </body>
 
